--- a/css/creative.css
+++ b/css/creative.css
@@ -466,6 +466,9 @@ img::-moz-selection {
     color: #fff;
     background: 0 0;
 }
+.carousel-inner > .item > img {
+    margin: 0 auto;
+}
 
 body {
     webkit-tap-highlight-color: #222;
